[gd_scene load_steps=10 format=3 uid="uid://bx50haospu0tg"]

[ext_resource type="Script" path="res://Scripts/pipe_puzzle.gd" id="1_kh74r"]
[ext_resource type="PackedScene" uid="uid://val3nnyam1v1" path="res://Scenes/pipe_source.tscn" id="2_77qtk"]
[ext_resource type="PackedScene" uid="uid://5w4pk0f10dhy" path="res://Scenes/pipe_l_2.tscn" id="3_y86ym"]
[ext_resource type="PackedScene" uid="uid://b01njvehxp4i2" path="res://Scenes/pipe_hor.tscn" id="4_nkba6"]
[ext_resource type="PackedScene" uid="uid://cjmsff36dk1ft" path="res://Scenes/pipe_vert.tscn" id="5_a8w86"]
[ext_resource type="PackedScene" uid="uid://5reqvc7hdmmw" path="res://Scenes/pipe_l_4.tscn" id="6_u7uqd"]
[ext_resource type="PackedScene" uid="uid://bg8b6oegyuxkb" path="res://Scenes/pipe_l_3.tscn" id="7_8p451"]
[ext_resource type="PackedScene" uid="uid://b3m7c54omkufk" path="res://Scenes/pipe_l.tscn" id="8_nx0oc"]
[ext_resource type="PackedScene" uid="uid://m88lww4ghhp2" path="res://Scenes/pipe_t.tscn" id="9_kxp0f"]

[node name="PipePuzzle" type="Node2D"]
script = ExtResource("1_kh74r")

[node name="Pipe_source" parent="." instance=ExtResource("2_77qtk")]
position = Vector2(0, 200)
position_in_puzzle = [0, 2]

[node name="Pipe_L2" parent="." instance=ExtResource("3_y86ym")]
position = Vector2(100, 200)
position_in_puzzle = [1, 2]

[node name="PipeHor" parent="." instance=ExtResource("4_nkba6")]
position = Vector2(300, 300)
position_in_puzzle = [1, 1]

[node name="PipeVert" parent="." instance=ExtResource("5_a8w86")]
position = Vector2(100, 300)
position_in_puzzle = [1, 3]

[node name="Pipe_L4" parent="." instance=ExtResource("6_u7uqd")]
position = Vector2(100, 400)
position_in_puzzle = [1, 4]

[node name="Pipe_L3" parent="." instance=ExtResource("7_8p451")]
position = Vector2(200, 400)
position_in_puzzle = [2, 4]

[node name="PipeL" parent="." instance=ExtResource("8_nx0oc")]
position = Vector2(200, 300)

[node name="Pipe_L32" parent="." instance=ExtResource("7_8p451")]
position = Vector2(400, 300)

[node name="PipeVert3" parent="." instance=ExtResource("5_a8w86")]
position = Vector2(400, 0)

[node name="PipeVert4" parent="." instance=ExtResource("5_a8w86")]
position = Vector2(400, 100)

[node name="PipeT" parent="." instance=ExtResource("9_kxp0f")]
position = Vector2(400, 200)

[node name="PipeHor2" parent="." instance=ExtResource("4_nkba6")]
position = Vector2(300, 200)

[node name="PipeT2" parent="." instance=ExtResource("9_kxp0f")]
position = Vector2(99, 98)

[node name="PipeHor3" parent="." instance=ExtResource("4_nkba6")]

[node name="PipeL2" parent="." instance=ExtResource("8_nx0oc")]

[node name="Pipe_L5" parent="." instance=ExtResource("6_u7uqd")]

[node name="PipeT3" parent="." instance=ExtResource("9_kxp0f")]

[node name="Up4" type="Button" parent="."]
offset_left = 550.0
offset_top = 100.0
offset_right = 650.0
offset_bottom = 200.0
text = "Up"

[node name="Up3" type="Button" parent="."]
offset_left = 650.0
offset_top = 100.0
offset_right = 750.0
offset_bottom = 200.0
text = "Up"

[node name="Up2" type="Button" parent="."]
offset_left = 450.0
offset_top = 100.0
offset_right = 550.0
offset_bottom = 200.0
text = "Up"

[node name="Up1" type="Button" parent="."]
offset_left = 350.0
offset_top = 100.0
offset_right = 450.0
offset_bottom = 200.0
text = "Up"

[node name="Down1" type="Button" parent="."]
offset_left = 350.0
offset_top = 770.0
offset_right = 450.0
offset_bottom = 870.0
text = "Up"

[node name="Down2" type="Button" parent="."]
offset_left = 450.0
offset_top = 770.0
offset_right = 550.0
offset_bottom = 870.0
text = "Up"

[node name="Down3" type="Button" parent="."]
offset_left = 550.0
offset_top = 770.0
offset_right = 650.0
offset_bottom = 870.0
text = "Up"

[node name="Down4" type="Button" parent="."]
offset_left = 650.0
offset_top = 770.0
offset_right = 750.0
offset_bottom = 870.0
text = "Up"

[connection signal="pressed" from="Up4" to="." method="shift_up" binds= [3]]
[connection signal="pressed" from="Up3" to="." method="shift_up" binds= [4]]
[connection signal="pressed" from="Up2" to="." method="shift_up" binds= [2]]
[connection signal="pressed" from="Up1" to="." method="shift_up" binds= [1]]
[connection signal="pressed" from="Down1" to="." method="shift_down" binds= [1]]
[connection signal="pressed" from="Down2" to="." method="shift_down" binds= [2]]
[connection signal="pressed" from="Down3" to="." method="shift_down" binds= [3]]
[connection signal="pressed" from="Down4" to="." method="shift_down" binds= [4]]
